Parte da estilizacao

--- a/index.html
+++ b/index.html
@@ -27,18 +27,19 @@
         </div>
         <div id="news-container">
             <div id="news">
-                <h1>Cricao do Jogo iniciou</h1>
+                <h1>NOVIDADES</h1>
+                <h2>Cricao do Jogo iniciou</h2>
                 <div>
-                    <img src="#">
+                    <img src="./assets/underconstruction.png">
                     <p>O jogo MetaXVersus comecou a ser desenvolvido na plataforma do roblox,e em breve sera distribuido para todos!</p>
                 </div>
             </div>
         </div>
-        <div>
-            <div id="item1">
+        <div id="game-content">
+            <div id="item1" class="character">
                 <h1>Goku</h1>
                 <div>
-                    <img src="#">
+                    <img src="./assets/goku.jpeg">
                     <div>
                         <p>Vida:</p>
                         <div>
@@ -61,10 +62,10 @@
                     </div>
                 </div>
             </div>
-            <div id="item1">
-                <h1>Goku</h1>
+            <div id="item2" class="character">
+                <h1>Ladybug</h1>
                 <div>
-                    <img src="#">
+                    <img src="./assets/goku.jpeg">
                     <div>
                         <p>Vida:</p>
                         <div>
@@ -87,10 +88,10 @@
                     </div>
                 </div>
             </div>
-            <div id="item1">
-                <h1>Goku</h1>
+            <div id="item1" class="character">
+                <h1>Lanterna Verde</h1>
                 <div>
-                    <img src="#">
+                    <img src="./assets/goku.jpeg">
                     <div>
                         <p>Vida:</p>
                         <div>
@@ -113,10 +114,10 @@
                     </div>
                 </div>
             </div>
-            <div id="item1">
-                <h1>Goku</h1>
+            <div id="item1" class="character">
+                <h1>King Noob</h1>
                 <div>
-                    <img src="#">
+                    <img src="./assets/goku.jpeg">
                     <div>
                         <p>Vida:</p>
                         <div>
@@ -139,10 +140,10 @@
                     </div>
                 </div>
             </div>
-            <div id="item1">
-                <h1>Goku</h1>
+            <div id="item1" class="character">
+                <h1>King Zombiee</h1>
                 <div>
-                    <img src="#">
+                    <img src="./assets/goku.jpeg">
                     <div>
                         <p>Vida:</p>
                         <div>
