Estilizado a parte de personagens
Para um melhor responsividade no site e tambem adicionado os links para meus perfis

--- a/index.html
+++ b/index.html
@@ -170,9 +170,9 @@
     <footer>
         <p>Criado por David Lucas,Caso queira saber mais sobre meu trabalho podera acessar:</p>
         <ul>
-            <li>GitHub</li>
-            <li>Instagram</li>
-            <li>Roblox</li>
+            <li><a href="https://github.com/DavidLucaxs" >GitHub</a></li>
+            <li><a href="https://www.linkedin.com/in/david-lucas-santiago-artigas-b6888623a/">Linkedim</a></li>
+            <li><a href="https://www.roblox.com/users/763861159/profile">Roblox</a></li>
         </ul>
     </footer>
 </body>
